# emergence-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
alpha/: README.md  agent.py
demo-agent/: README.md  agent.py
demo-pub/: README.md  agent.py
hello-build/: README.md  agent.py
hubtest/: Dockerfile  README.md  agent.py
src/emergence_cli/: __main__.py
src/emergence_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_build.py  test_init.py  test_publish.py  test_version.py
test-agent/: README.md  agent.py
