[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence-cli"
version = "0.2.0"
description = "CLI for Emergence multi-agent network"
authors = [{name="Your Name"}]
dependencies = ["click>=8.1"]

[project.scripts]
emergence = "emergence_cli.__main__:cli"